Attempt to fix too-wide figures and displaymath issue

--- a/lib/softcover/book_template/html/stylesheets/softcover.css
+++ b/lib/softcover/book_template/html/stylesheets/softcover.css
@@ -195,7 +195,7 @@ body #book {
   text-align: center;
 }
 
-#book .graphics.image img {
+#book .graphics img {
   margin-top: 2em;
   max-width: 100%
 }
