--- a/lib/softcover/book_template/epub/OEBPS/styles/epub.css
+++ b/lib/softcover/book_template/epub/OEBPS/styles/epub.css
@@ -106,3 +106,10 @@ li p {
 .aside {
   margin: 15px 0;
 }
+
+
+/* Make sure equations do not overflow on ePub readers */
+
+div.equation img {
+  max-width: 100%;
+}
