--- a/lib/softcover/book_template/html/stylesheets/softcover.css
+++ b/lib/softcover/book_template/html/stylesheets/softcover.css
@@ -1,13 +1,37 @@
 /* This file is auto-generated. Do not edit. */
 
 body #book {
-  width: 41em;
+  max-width: 41em;
   font-size: 18px;
   font-family: Georgia, serif;
   line-height: 1.5;
   margin-left: 5em;
   color: #070707;
   margin-bottom: 20em;
+}
+
+@media only screen and (max-width: 900px) {
+  body #book {
+    /* ease up on the left margin when screens get medium size */
+    margin-left: 3em;
+    margin-right: 3em;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  body #book {
+    /* smaller font and minimal margin for mobile */
+    font-size: 14px;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+  }
+
+  body #book .graphics img {
+    /* prevent images using percent width from becoming too small on mobile */
+    min-width: 300px;
+  }
+
 }
 
 #book h1 {
