--- a/lib/softcover/server/views/book.html.erb
+++ b/lib/softcover/server/views/book.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="stylesheets/pygments.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="stylesheets/softcover.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="stylesheets/custom.css" media="screen" rel="stylesheet" type="text/css" />
